--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -26,3 +26,9 @@ ion-menu-button {
 #container a {
   text-decoration: none;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
