--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -1,9 +1,62 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>about</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-header class="ion-no-border">
+    
+  </ion-header>
 
+  
+
+  <div class="about-info">
+    <h3 class="ion-padding-top ion-padding-start">About</h3>
+
+    <p class="ion-padding-start ion-padding-end">
+      The Ionic Conference is a one-day conference on {{ conferenceDate | date: 'mediumDate' }} featuring talks from the Ionic team. It is focused on Ionic applications being built with Ionic Framework. This includes migrating apps to the latest version of the framework, Angular concepts, Webpack, Sass, and many other technologies used in Ionic 2. Tickets are completely sold out, and we’re expecting more than 1000 developers – making this the largest Ionic conference ever!
+    </p>
+
+    <h3 class="ion-padding-top ion-padding-start">Details</h3>
+
+    <ion-list lines="none">
+      <ion-item>
+        <ion-label>
+          Location
+        </ion-label>
+        <ion-select [(ngModel)]="location" [interfaceOptions]="selectOptions">
+          <ion-select-option value="madison">Madison, WI</ion-select-option>
+          <ion-select-option value="austin">Austin, TX</ion-select-option>
+          <ion-select-option value="chicago">Chicago, IL</ion-select-option>
+          <ion-select-option value="seattle">Seattle, WA</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          Date
+        </ion-label>
+        <ion-datetime
+          displayFormat="MMM DD, YYYY"
+          max="2056"
+          [(ngModel)]="conferenceDate">
+        </ion-datetime>
+      </ion-item>
+    </ion-list>
+
+    <h3 class="ion-padding-top ion-padding-start">Internet</h3>
+
+    <ion-list lines="none">
+      <ion-item>
+        <ion-label>
+          Wifi network
+        </ion-label>
+        <ion-label class="ion-text-end">
+          ica{{conferenceDate | date: 'y'}}
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          Password
+        </ion-label>
+        <ion-label class="ion-text-end">
+          makegoodthings
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </div>
 </ion-content>
