--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,7 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-item lines="full">    
-            <ion-toggle id="themeToggle" slot="end"></ion-toggle>
-          </ion-item>
+          
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
@@ -15,7 +13,11 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
-
+        <ion-item>
+          <ion-icon slot="start" name="moon"></ion-icon>
+          <ion-label>Dark mode</ion-label>
+          <ion-toggle [(ngModel)]="dark" (ionChange)="updateDarkMode()"></ion-toggle>
+        </ion-item>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
