--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,8 @@
         <ion-item>
           <ion-icon slot="start" name="moon"></ion-icon>
           <ion-label>Dark mode</ion-label>
-          <ion-toggle [(ngModel)]="dark" (ionChange)="updateDarkMode()"></ion-toggle>
+               <ion-toggle slot='end' (ionChange)="toggleTheme($event)" slot="end"></ion-toggle>
+
         </ion-item>
       </ion-content>
     </ion-menu>
